MED-401 Right justifying share dropdown to prevent overflow

--- a/_dropdown.styl
+++ b/_dropdown.styl
@@ -12,7 +12,7 @@ dropdown()
 	.dropdown-content
 		background gray-darkest
 		color gray-lightest
-		left 50%
+		right 0
 		position absolute
 		opacity 0
 		transition style-duration all
@@ -25,7 +25,7 @@ dropdown()
 			content ' '
 			display block
 			height 0
-			left 50%
+			right 5px
 			margin -5px 0 0 -2.5px
 			position absolute
 			top -5px
