--- a/_tiles.styl
+++ b/_tiles.styl
@@ -208,10 +208,6 @@ tiles()
 			position absolute
 			width 100%
 
-		> div
-			//pads a bit and prevents mysterious overflow
-			padding 0 padding-base 
-
 	// colors
 	tile-type(color)
 		header
